--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -1,13 +1,13 @@
-name : first workflow
-on :
-  push :
+name: first workflow
+on:
+  push:
     branches:
-      -"main"
+      - "main"
 jobs:
-  first-workflow-job:
+  First-workflow-job:
     name: first job
     runs-on: ubuntu-latest
-    steps :
-      -name: run bash command
-       run: echo "welcome to egypt"
-       shell: bash
+    steps:
+      - name: run bash command
+        run: echo "welcome to Egypt"
+        shell: bash
